welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:22: error: illegal start of declaration
	if(a >= 20 && a <= 40){
        ^max1020:28: error: illegal start of declaration
	return is1020Bool;
        ^